tests/compile_errors/020-invalid-int-bin-literal.buzz
// '_' must be between digits
test "invalid bin literal" {
   _ = 0b_100;
}
